--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+
+Version 0.5.1 (March 13 2012)
+- Rails 3.1.3 campatability added by Paul Chechetin
+
 Version 0.5.0 (may 10 2008)
 - Changed model relationships representation (feature request #10898)
 - Added support for plugins models (-p) (feature request #12742 by 
